# pywise

./: .gitignore  .pre-commit-config.yaml  .python-version  .travis.yml  README.md  pyproject.toml  requirements-test.txt  setup.py  tox.ini  x.py
.circleci/: config.yml
core_utils/: archives.py  collections  collections.py  common.py  env.py  format.py  functional.py  io_utils.py  iteration.py  loggers.py  python_utils.py  schema.py  serialization.py  support_for_testing.py  timer.py  url.py  url_bucket_kv.py
tests/: test_archives.py  test_collections.py  test_common.py  test_custom_serialization.py  test_dataclass_with_generic.py  test_deserialize_unions_with_collections.py  test_env.py  test_format.py  test_io_utils.py  test_iteration.py  test_loggers.py  test_readme_example.py  test_schema.py  test_serialization.py  test_timer.py  test_timing.py  test_url.py  test_url_bucket_kv.py
utils_general/: python_utils.py  timer.py  url.py
