[tool.poetry]
name = "pywise"
version = "0.5.0"
description = "Robust serialization support for NamedTuple & @dataclass data types."
authors = ["Malcolm Greaves <greaves.malcolm@gmail.com>"]
homepage = "https://github.com/malcolmgreaves/pywise"
license = "Apache-2.0"
readme = 'README.md'
exclude = ['core_utils/support_for_testing.py'] # NEVER INCLUDE THIS FILE (!)
packages = [
    { include = "core_utils" },
]


[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
# test & development tools: important to pin these to minimum working versions
pre-commit = "^3.5.0"
# keep in-sync with .pre-commit-config.yaml
mypy = "^1.10.0"
ruff = "^0.4.2"
# end sync
# testing related
pytest-cov = "^4.1.0"
coveralls = "^3.3.1"
tox = "^4.12.1"
# external dependencies needed in tests
numpy = "^1.21" # note: needs to be compatible with apple silicon
pyyaml = "*"
#torch = "*" # optional test dependency: can install manually via `pip install torch` during development
# for ease of development
ipython = "*"
ipdb = "*"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
